<resources>
    <string name="app_name">Stories</string>

    <!--  Form Login & Register  -->
    <string name="text_login_register_now">New to Stories? Register</string>
    <string name="text_register_login_now">Already member? Login</string>


    <!--  General Text  -->
    <string name="text_general_email">Email</string>
    <string name="text_general_password">Password</string>
    <string name="text_general_login">Login</string>
    <string name="text_general_signup">Sign up</string>
    <string name="text_general_name">Name</string>
    <string name="text_general_cancel">Cancel</string>
    <string name="text_general_ok">OK</string>

    <!--  Error Rules  -->
    <string name="name_error_rules">Name is required</string>
    <string name="password_error_rules">Minimal 8 Character</string>
    <string name="email_error_rules">Email is required</string>
    <string name="email_error_format">Wrong Email Format</string>


    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="add_stories">Post</string>
    <string name="retry">Try Again</string>
    <string name="explore">Explore</string>
    <string name="settings">Settings</string>

    <!--  Permission Rationale Message  -->
    <string name="rationale_message_location">Location permission is needed to show your current location on the map.</string>
    <string name="rationale_button_grant">Grant Permission</string>
    <string name="rationale_message_general">You need to grant of permission to use this feature</string>
    <string name="rationale_title_permission">Permission Required</string>


</resources>