<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:src="@drawable/ic_register_ilustration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/text_general_signup"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/iv_avatar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_register_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:hint="@string/text_general_name"
        app:layout_constraintTop_toBottomOf="@id/tv_title_signup"
        app:startIconDrawable="@drawable/baseline_person_4_24">

        <EditText
            android:id="@+id/ed_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:maxLength="30" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_register_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:hint="@string/text_general_email"
        app:layout_constraintTop_toBottomOf="@id/til_register_name"
        app:startIconDrawable="@drawable/baseline_alternate_email_24">

        <com.raytalktech.storyapp.customui.CustomEditText
            android:id="@+id/ed_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLength="60" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_register_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:hint="@string/text_general_password"
        app:layout_constraintTop_toBottomOf="@id/til_register_email"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/baseline_lock_24">

        <com.raytalktech.storyapp.customui.CustomEditText
            android:id="@+id/ed_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="20" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_register"
        style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="@dimen/dimen_16dp"
        android:enabled="false"
        android:text="@string/text_general_signup"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/til_register_password" />

    <ProgressBar
        android:id="@+id/pb_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/btn_register"
        app:layout_constraintStart_toStartOf="@id/btn_register"
        app:layout_constraintTop_toBottomOf="@id/btn_register"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_login"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_32dp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Joined us before? Login" />

</androidx.constraintlayout.widget.ConstraintLayout>